--- a/site/templates/galeria/css/style.css
+++ b/site/templates/galeria/css/style.css
@@ -77,7 +77,7 @@ h1, h2, h3, h4 {
 
 /* HERO GALERIA (imagem fullscreen) */
 .hero-galeria {
-  height: 100vh;
+  height: 100svh;
   position: relative;
   overflow: hidden;
   display: flex;
